<resources>
    <string name="app_name">FireBaseFinal</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="name"> Name : </string>
    <string name="name2"> Muhammad Adnan </string>
    <string name="phone"> Phone : </string>
    <string name="phone2"> 03442147399 </string>
    <string name="city"> City : </string>
    <string name="city2"> Karachi  </string>
    <string name="email"> Email : </string>
    <string name="email2"> adnan.021@hotmail.com </string>
    <string name="profile"> Profile </string>
    <string name="gender"> Gender : </string>
    <string name="gender2"> Male </string>

    <string name="Address"> Address : </string>
    <string name="Address2"> MC-269, Green Town, \nShah Faisal Colony     </string>

    <string name="slide_1_title">Best Food in Syracuse</string>
    <string name="slide_1_desc">Best restaurants for your family and friend!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every store near you!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="title_activity_maps">Map</string>

    <string name="speech_prompt">Say something&#8230;</string>

    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
