<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_card_view3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:contentDescription="@string/profile"
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:src="@drawable/profile_pic"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="350sp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginBottom="30dp"
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/textView4"
                android:layout_width="50sp"
                android:layout_height="40sp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50sp"
                android:layout_height="40sp"
                android:text="@string/email" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="50sp"
                android:layout_height="40sp"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="60sp"
                android:layout_height="40sp"
                android:text="@string/Address"
                android:maxLines="5"
                android:singleLine="false"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="50sp"
                android:layout_height="40sp"
                android:text="@string/city"

                />

            <EditText
                android:layout_marginStart="65dp"
                android:layout_marginTop="-210dp"
                android:id="@+id/editText4"
                android:layout_width="250sp"
                android:layout_height="40sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name2" />

            <EditText
                android:layout_marginStart="65dp"
                android:id="@+id/editText"
                android:layout_width="250sp"
                android:layout_height="40sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email2" />

            <EditText
                android:layout_marginStart="65dp"
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/phone2" />

            <EditText
                android:id="@+id/editText3"
                android:layout_marginStart="65sp"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/Address2"

                android:maxLines="5"
                android:singleLine="false"
                android:ellipsize="end"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65sp"
                android:inputType="text"
                android:text="@string/city2"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true" />
</android.support.design.widget.CoordinatorLayout>