<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_card_view2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    tools:context="com.healthcare.CardView2">

    <android.support.design.widget.CoordinatorLayout

        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/MyAppbar1"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true">


            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="57dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/donorhero"/>

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/toolbar2"
                    android:elevation="4dp"
                    android:theme="@style/AppTheme.AppBarOverlay"
                    android:layout_alignParentTop="true"
                    android:background="@color/silver">


                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="-100dp"
                        android:layout_marginTop="10dp">


                    </LinearLayout>






                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/cardView2"
                />

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/name"
        android:layout_marginStart="20sp"
        android:layout_marginTop="310sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/email"
        android:layout_marginStart="20sp"
        android:layout_marginTop="340sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/phone"
        android:layout_marginStart="20sp"
        android:layout_marginTop="370sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Address"
        android:layout_marginStart="20sp"
        android:layout_marginTop="400sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/gender"
        android:layout_marginStart="20sp"
        android:layout_marginTop="450sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/city"
        android:layout_marginStart="20sp"
        android:layout_marginTop="480sp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPersonName"
        android:text="@string/name2"
        android:layout_marginStart="70sp"
        android:layout_marginTop="45sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:text="@string/email2"
        android:layout_marginStart="70sp"
        android:layout_marginTop="105sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="phone"
        android:text="@string/phone2"
        android:layout_marginStart="70sp"
        android:layout_marginTop="165sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:text="@string/Address2"
        android:layout_marginStart="70sp"
        android:layout_marginTop="245sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:text="@string/gender2"
        android:layout_marginStart="70sp"
        android:layout_marginTop="340sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:text="@string/city2"
        android:layout_marginStart="70sp"
        android:layout_marginTop="400sp"
        />
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="150dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/mapview1"
            android:text="Get Map"/>

    </LinearLayout>

</RelativeLayout>
